# PiEdge_EduKit

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHECKSUMS.txt  CODEOWNERS  DATA_LICENSES.md  FIX_PROBLEMS_README.md  LINTING_CONFIG.md  Makefile  README.md  README.sv.md  RELEASE_NOTES_v0.1.0.md  RUBRIC.md  RUFF_NOTEBOOK_FIX.md  SETUP_VSCODE.md  VSCODE_SETUP.md  app.py  create_test_images.py  index.html  index.sv.html  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-minimal.txt  requirements-pc.txt  requirements-pi.txt  requirements.txt  run_labs.bat  run_lesson.bat  run_lesson.sh  setup.py  smoke_test.py  verify.py
labs/: 00_run_everything.ipynb  01_training_and_export.ipynb  02_latency_benchmark.ipynb  03_quantization.ipynb  04_evaluate_and_verify.ipynb  README.md  lab1_training_and_export.ipynb  lab2_latency_benchmark.ipynb
models/: .gitkeep  train_metrics.csv  training_info.json
models_exp1/: train_metrics.csv
models_test/: train_metrics.csv
notebooks/: 00_run_everything.ipynb  01_training_and_export.ipynb  02_latency_benchmark.ipynb  03_quantization.ipynb  04_evaluate_and_verify.ipynb  README.md
pi_setup/: install_pi_requirements.sh  wiring_guide.md
piedge_edukit/: benchmark.py  benchmark_cli.py  gpio_cli.py  gpio_control.py  model.py  quantization.py  quantization_cli.py  train.py  train_cli.py
progress/: .gitignore  lesson_progress.json  receipt.json
reports/: .gitignore  latency.csv  latency_results.json  latency_summary.txt  quantization_comparison.csv  training_log.json  (+2 more)
(+48 files in other folders)
